--- a/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -24,13 +24,11 @@
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            @EntityStrings.SizeStandards<b class="caret"></b>
+                            @EntityStrings.SizingStandards<b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
-                            <li>@Html.ActionLink(@EntityStrings.SizeStandards, "Index", "SizeStandards")</li>
-                            <li>@Html.ActionLink(@EntityStrings.CreateSizeStandard, "Create", "SizeStandards")</li>
-                            <li class="divider"></li>
-                            <li>@Html.ActionLink(@EntityStrings.CreateSizeCaption, "Create", "SizeCaptions")</li>
+                            <li>@Html.ActionLink(@EntityStrings.SizingStandards, "Index", "SizingStandards")</li>
+                            <li>@Html.ActionLink(@EntityStrings.CreateSizingStandard, "Create", "SizingStandards")</li>
                         </ul>
                     </li>
                     <li class="dropdown">
