--- a/Source/CriticalPath.Web/Areas/Admin/Views/Users/Index.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/Users/Index.cshtml
@@ -53,5 +53,5 @@
 @Html.Partial("_PagerPartial")
 
 @section scripts{
-    @Html.Partial("_IndexScriptsPartial", "SizeCaptions")
+    @Html.Partial("_IndexScriptsPartial", "Users")
 }
