--- a/Source/CriticalPath.Web/Content/Site.css
+++ b/Source/CriticalPath.Web/Content/Site.css
@@ -16,7 +16,7 @@
     white-space: normal;
 }
 
-.sizeCaption-Caption {
+.shadedCaption {
     color: #DDD;
     background-color: #3a3f44;
     text-align: center;
