--- a/Source/CriticalPath.Web/Areas/Admin/Views/SizingStandards/Edit.cshtml
+++ b/Source/CriticalPath.Web/Areas/Admin/Views/SizingStandards/Edit.cshtml
@@ -1,27 +1,28 @@
 @using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CriticalPath.Data.Resources
-@model SizeStandardVM
+@model SizingStandardVM
 @{
-    ViewBag.Title = EntityStrings.CreateSizeStandard;
+    ViewBag.Title = EntityStrings.EditSizingStandard;
 }
 <h2 class="col-lg-offset-2 col-md-offset-3 col-sm-offset-3">@ViewBag.Title</h2>
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
+    
     <div class="form-horizontal">
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
-
+        
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-7 col-md-8 col-sm-8">
+            <div class="col-lg-5 col-md-6 col-sm-7">
                 @Html.TextBoxFor(m => m.Title, new { @class = "form-control", autocomplete = "off" })
                 @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
             </div>
         </div>
         <div class="form-group">
-            @Html.Partial("_EditSizeCaptions")
+            @Html.Partial("_EditSizings")
         </div>
         @Html.Partial("_SaveButtonsPartial")
     </div>
