--- a/Source/CriticalPath.Web/Views/Shared/EditorTemplates/Sizing.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/EditorTemplates/Sizing.cshtml
@@ -1,11 +1,11 @@
 @using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CriticalPath.Data.Resources
-@model SizeCaption
+@model Sizing
 @{
     Layout = null;
 }
 @if (Model != null)
 {
-    <div class="col-xs-1 sizeCaption-Caption">@Model.Caption</div>
+    <div class="col-xs-1 shadedCaption">@Model.Caption</div>
 }
