--- a/Source/CriticalPath.Web/Views/Shared/EditorTemplates/SizingStandard.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/EditorTemplates/SizingStandard.cshtml
@@ -1,11 +1,11 @@
 @using CriticalPath.Web.Models
 @using CriticalPath.Data
 @using CriticalPath.Data.Resources
-@model SizeStandard
+@model SizingStandard
 @{
     Layout = null;
 }
 @if (Model != null)
 {
-    <div><a href='/SizeStandards/Details/@Model.Id'>@Model.Title</a></div>
+    <div><a href='/SizingStandards/Details/@Model.Id'>@Model.Title</a></div>
 }
