--- a/Source/CriticalPath.Web/Content/tools.css
+++ b/Source/CriticalPath.Web/Content/tools.css
@@ -26,7 +26,7 @@
 /*
  * Margin & Padding Left
  ***************************/
-.ml0 { margin-left: 0px !important; }
+.ml0 { margin-left: 0 !important; }
 .ml1 {margin-left:1px !important;}
 .ml2 {margin-left:2px !important;}
 .ml5 { margin-left: 5px !important; }
@@ -38,7 +38,7 @@
 .ml35 { margin-left: 35px !important; }
 .ml40 { margin-left: 40px !important; }
 
-.pl0 { padding-left: 0px !important; }
+.pl0 { padding-left: 0 !important; }
 .pl5 { padding-left: 5px !important; }
 .pl10 { padding-left: 10px !important; }
 .pl15 { padding-left: 15px !important; }
@@ -51,7 +51,7 @@
 /*
  * Margin & Padding Top
  ***************************/
-.mt0 { margin-top: 0px !important; }
+.mt0 { margin-top: 0 !important; }
 .mt1 {margin-top:1px !important;}
 .mt2 {margin-top:2px !important;}
 .mt5 { margin-top: 5px !important; }
@@ -63,7 +63,7 @@
 .mt35 { margin-top: 35px !important; }
 .mt40 { margin-top: 40px !important; }
 
-.pt0 { padding-top: 0px !important; }
+.pt0 { padding-top: 0 !important; }
 .pt1 { padding-top: 1px !important; }
 .pt2 { padding-top: 2px !important; }
 .pt5 { padding-top: 5px !important; }
@@ -80,7 +80,7 @@
 /*
  * Margin & Padding Right
  ***************************/
-.mr0 { margin-right: 0px !important; }
+.mr0 { margin-right: 0 !important; }
 .mr1 {margin-right:1px !important;}
 .mr2 {margin-right:2px !important;}
 .mr5 { margin-right: 5px !important; }
@@ -92,7 +92,7 @@
 .mr35 { margin-right: 35px !important; }
 .mr40 { margin-right: 40px !important; }
 
-.pr0 { padding-right: 0px !important; }
+.pr0 { padding-right: 0 !important; }
 .pr5 { padding-right: 5px !important; }
 .pr10 { padding-right: 10px !important; }
 .pr15 { padding-right: 15px !important; }
@@ -105,7 +105,7 @@
 /*
  * Margin & Padding Bottom
  ***************************/
-.mb0 { margin-bottom: 0px !important; }
+.mb0 { margin-bottom: 0 !important; }
 .mb1 {margin-bottom:1px !important;}
 .mb2 {margin-bottom:2px !important;}
 .mb5 { margin-bottom: 5px !important; }
@@ -117,7 +117,7 @@
 .mb35 { margin-bottom: 35px !important; }
 .mb40 { margin-bottom: 40px !important; }
 
-.pb0 { padding-bottom: 0px !important; }
+.pb0 { padding-bottom: 0 !important; }
 .pb5 { padding-bottom: 5px !important; }
 .pb10 { padding-bottom: 10px !important; }
 .pb15 { padding-bottom: 15px !important; }
