--- a/Source/CriticalPath.Web/Views/Products/Details.cshtml
+++ b/Source/CriticalPath.Web/Views/Products/Details.cshtml
@@ -40,4 +40,12 @@
         @Html.DisplayFor(m => m.Category)
     </div>
 </div>
+<div class="row">
+    <label class="control-label col-md-2 col-sm-3">
+        @Html.DisplayNameFor(model => model.SizingStandard)
+    </label>
+    <div class="col-md-8 col-sm-9 col-lg-7 pl0">
+        @Html.DisplayFor(m => m.SizingStandard)
+    </div>
+</div>
 @Html.Partial("_DetailFormButtonsPartial")
