--- a/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/SizingStandard.cshtml
+++ b/Source/CriticalPath.Web/Views/Shared/DisplayTemplates/SizingStandard.cshtml
@@ -7,5 +7,14 @@
 }
 @if (Model != null)
 {
-    <div><a href='/SizingStandards/Details/@Model.Id'>@Model.Title</a></div>
+    <div class="col-lg-3 col-md-5">@Model.Title</div>
+    int i = 0;
+    foreach (var sizing in Model.Sizings)
+    {
+        string divClass = i==6 ?
+                "shadedCaption col-lg-1 col-lg-offset-0 col-md-1 col-md-offset-5 visible-lg visible-md" :
+                "shadedCaption col-lg-1 col-md-1 visible-lg visible-md";
+        <div class='@divClass'>@sizing.Caption</div>
+        i++;
+    }
 }
