--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Details.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Details.cshtml
@@ -100,7 +100,7 @@
     <label class="control-label col-md-2 col-sm-3">
         @Html.DisplayNameFor(model => model.SizingStandard)
     </label>
-    <div class="col-md-10 col-sm-9">
+    <div class="col-md-10 col-sm-9 pl0">
         @Html.DisplayFor(m => m.SizingStandard)
     </div>
 </div>
