--- a/Source/CriticalPath.Web/Views/PurchaseOrders/Create.cshtml
+++ b/Source/CriticalPath.Web/Views/PurchaseOrders/Create.cshtml
@@ -6,21 +6,13 @@
     ViewBag.Title = EntityStrings.CreatePurchaseOrder;
 }
 <h2 class="col-lg-offset-2 col-md-offset-3 col-sm-offset-3">@ViewBag.Title</h2>
-@using (Html.BeginForm())
-{
+<form action="/PurchaseOrders/Create" method="post" onsubmit="enableCaptions();">
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
         @Html.ValidationSummary(true)
         @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
-            <div class="col-lg-5 col-md-6 col-sm-7">
-                @Html.TextBoxFor(m => m.Title, new { @class = "form-control", autocomplete = "off" })
-                @Html.ValidationMessageFor(m => m.Title, "", new { @class = "text-danger" })
-            </div>
-        </div>
         <div class="form-group">
             @Html.LabelFor(model => model.OrderDate, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-4 col-md-5 col-sm-6">
@@ -39,12 +31,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.UnitPrice, htmlAttributes: new { @class = "control-label col-lg-2 col-md-3 col-sm-3" })
             <div class="col-lg-2 col-md-2 col-sm-3">
+                @{ Html.EnableClientValidation(false); }
                 @Html.EditorFor(m => m.UnitPrice, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
                 @Html.ValidationMessageFor(m => m.UnitPrice, "", new { @class = "text-danger" })
+                @{ Html.EnableClientValidation(true); }
             </div>
             @Html.LabelFor(model => model.Quantity, htmlAttributes: new { @class = "control-label col-lg-1 col-md-2 col-sm-2" })
             <div class="col-lg-2 col-md-2 col-sm-2">
-                @Html.EditorFor(m => m.Quantity, new { htmlAttributes = new { @class = "form-control", autocomplete = "off", @type = "number" } })
+                @Html.EditorFor(m => m.Quantity, new { htmlAttributes = new { @class = "form-control", autocomplete = "off" } })
                 @Html.ValidationMessageFor(m => m.Quantity, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -80,7 +74,7 @@
         </div>
         @Html.Partial("_SaveButtonsPartial")
     </div>
-}
+</form>
 @section Scripts
 {
     @Scripts.Render("~/bundles/jqueryval")
